fix CI deprecation notice (#51)
* Refactored command line arguments parsing
* Added --alwaysEvaluate flag
* Fix error message shown when invalid arguments are provided
* Fix real number of evaluations shown and cache
* Fix cloning and copying not working since the beginning.....
* Fix setVariable to be truly template
* Added sanitizer to template's CMakeLists
* Added parallel initialization
* Fix lot of UB and memory leaks
* Fix CMAES
* Documented cmd options
* fix #50 and removed deprecated functions from CI
* Fix some warnings
* Moved to latest Boost version on Windows
* Fix bad serverPort in CMAES
* Replaced unorthodox exit code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           else
               EXPORT_VALUE="${TMP_GITHUB_REF}"
           fi
-          echo "::set-output name=branch::${EXPORT_VALUE}"
+          echo "branch=${EXPORT_VALUE}" >> $GITHUB_OUTPUT
 
   Linux:
     name: Build, install and test (Linux)
@@ -95,9 +95,9 @@ jobs:
           NBE=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\2/p')
           PASSED=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\1/p')
           FAILED=$((NBE - PASSED))
-          echo "::set-output name=total::${NBE}"
-          echo "::set-output name=passed::${PASSED}"
-          echo "::set-output name=failed::${FAILED}"
+          echo "total=${NBE}" >> $GITHUB_OUTPUT
+          echo "passed=${PASSED}" >> $GITHUB_OUTPUT
+          echo "failed=${FAILED}" >> $GITHUB_OUTPUT
         shell: bash
 
   MacOS:
@@ -158,9 +158,9 @@ jobs:
           NBE=$(echo ${LINE} | gsed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\2/p')
           PASSED=$(echo ${LINE} | gsed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\1/p')
           FAILED=$((NBE - PASSED))
-          echo "::set-output name=total::${NBE}"
-          echo "::set-output name=passed::${PASSED}"
-          echo "::set-output name=failed::${FAILED}"
+          echo "total=${NBE}" >> $GITHUB_OUTPUT
+          echo "passed=${PASSED}" >> $GITHUB_OUTPUT
+          echo "failed=${FAILED}" >> $GITHUB_OUTPUT
         shell: bash
 
   Windows:
@@ -182,8 +182,8 @@ jobs:
         run: choco install winflexbison3 sed
         shell: bash
 
-      - name: Installing Boost 1.79
-        run: choco install boost-msvc-14.3 --version 1.79.0
+      - name: Installing Boost
+        run: choco install boost-msvc-14.3
 
           #- name: Installing CUDA
           #  uses: Jimver/cuda-toolkit@v0.2.10
@@ -227,9 +227,9 @@ jobs:
           NBE=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\2/p')
           PASSED=$(echo ${LINE} | sed -n 's/\([[:digit:]]\+\)\/\([[:digit:]]\+\)/\1/p')
           FAILED=$((NBE - PASSED))
-          echo "::set-output name=total::${NBE}"
-          echo "::set-output name=passed::${PASSED}"
-          echo "::set-output name=failed::${FAILED}"
+          echo "total=${NBE}" >> $GITHUB_OUTPUT
+          echo "passed=${PASSED}" >> $GITHUB_OUTPUT
+          echo "failed=${FAILED}" >> $GITHUB_OUTPUT
         shell: bash
 
   Badges:
