--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -432,7 +432,7 @@ jobs:
         shell: bash
 
       - name: Test templates for UB, leaks and OOB
-        if: ${{ always() && steps.cmake-install.conclusion == "success" }}
+        if: ${{ always() && steps.cmake-install.conclusion == 'success' }}
         run: |
           CC=clang CXX=clang++ EZ_PATH=/usr/local/easena/ bash ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena" --no-cuda --ez-args "--savePopulation 1 --nbGen 3 --popSize 100 --nbOffspring 1.0" --cmake-args "-DCMAKE_BUILD_TYPE=Debug -DSANITIZE=ON" --examples-directory ${{github.workspace}}/examples/templates --verbose | tee examples.output
           result_code=${PIPESTATUS[0]}
@@ -440,7 +440,7 @@ jobs:
         shell: bash
 
       - name: Test remote island model for UB, leaks and OOB
-        if: ${{ always() && steps.cmake-install.conclusion == "success" }}
+        if: ${{ always() && steps.cmake-install.conclusion == 'success' }}
         run: |
          ASAN_OPTIONS=protect_shadow_gap=0 CC=clang CXX=clang++ ./examples/build-all.sh $EZ_PATH/bin/easena --ez-args "--nbGen 1000 --popSize 1000 --nbOffspring 1.0" --cmake-args "-DCMAKE_BUILD_TYPE=Debug -DSANITIZE=ON" --verbose --network --no-cuda --examples-directory examples/templates
           result_code=${PIPESTATUS[0]}
@@ -448,7 +448,7 @@ jobs:
         shell: bash
 
       - name: Test templates for errors when loading population from .pop
-        if: ${{ always() && steps.cmake-install.conclusion == "success" }}
+        if: ${{ always() && steps.cmake-install.conclusion == 'success' }}
         run: |
          ASAN_OPTIONS=protect_shadow_gap=0 CC=clang CXX=clang++ ./examples/build-all.sh $EZ_PATH/bin/easena --ez-args "--startFromFile 1 --nbGen 3 --popSize 100 --nbOffspring 1.0" --cmake-args "-DCMAKE_BUILD_TYPE=Debug -DSANITIZE=ON" --verbose --no-cuda --examples-directory examples/templates
           result_code=${PIPESTATUS[0]}
