--- a/config.h.in
+++ b/config.h.in
@@ -1,10 +1,14 @@
 #pragma once
 
-#cmakedefine PROJECT_NAME "@PROJECT_NAME@"
-#cmakedefine PROJECT_VERSION  "@PROJECT_VERSION@"
+#define PROJECT_NAME "@PROJECT_NAME@"
+#define PROJECT_VERSION  "@PROJECT_VERSION@"
 #define PROJECT_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
 #define PROJECT_VERSION_MINOR @PROJECT_VERSION_MINOR@
 #define PROJECT_VERSION_PATCH @PROJECT_VERSION_PATCH@
+
+#define EZ_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
+#define EZ_BUILT_BY "@CMAKE_CXX_COMPILER_ID@"
+#define EZ_BUILT_BY_VERSION "@CMAKE_CXX_COMPILER_VERSION@"
 
 #cmakedefine USE_OPENMP
 
