Fix MSVC not finding Boost ?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,7 +115,13 @@ else ()
 	target_compile_options(libeasna PUBLIC $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-unknown-pragmas>)
 endif ()
 
-## Boost (asio)
+## Boost
+if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
+	add_definitions(-DBOOST_ALL_NO_LIB)
+	set(Boost_USE_STATIC_LIBS ON)
+	set(Boost_USE_MULTITHREADED ON)
+	set(Boost_USE_STATIC_RUNTIME OFF)
+endif()
 find_package(Boost REQUIRED COMPONENTS iostreams serialization program_options)
 target_include_directories(libeasea PUBLIC ${Boost_INCLUDE_DIRS})
 target_link_libraries(libeasea PUBLIC ${Boost_LIBRARIES})
