--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
         id: cuda-toolkit
         with:
           cuda: '12.1.0'
+          method: 'network'
 
       - name: CMake configure
         id: cmake-configure
